# MS-AI-LLM

./: DAY01_001_OpenAI_Chat_Completion.ipynb  DAY01_002_Langchain_Components.ipynb  DAY01_003_RAG.ipynb  DAY01_004_Langfuse_Pompt_Management.ipynb  DAY02_001_RAG_Evalution.ipynb  DAY02_002_Retrieval_Metrics.ipynb  DAY02_003_Hybrid_Search.ipynb  DAY02_004_Query_Expansion.ipynb  DAY02_005_Rerank_Compression.ipynb  DAY02_006_Generation_Metrics.ipynb  pyproject.toml
Day1/: DAY01_005_Prompt_Engineering_Fewshot.ipynb
data/: evaluation_dataset.csv  ragas_evaluation_results.csv  synthetic_testset.csv
local_chroma_db/: chroma.sqlite3
web_chroma_db/: chroma.sqlite3
